interpreter/examples/good/less_simple/fib.dl
// use of recursion - should print 55
{
    function fib(n) {
        if n <= 1 then return n else return (fib(n-1) + fib(n-2));
    }.
    print fib(10);
}
