interpreter/examples/bad/type/bad_function_assignment1.dl
{
    function f(x) return 1,
    function g(ref x) return 2.
    f = g
}
